[] Lock timeout after manual lock no longer saves empty database.
[1754566] State of tree view is now persistent across minimize, lock &
save.
[1771357] Timeout timer now reset in all dialog boxes - PasswordSafe
will no longer minimize in the middle of work with an open dialog box.
[1754054, 1754611, 1740704] Items are now fully sorted when "put groups first
in display tree" selected.
[1757298, 1774428] Merge nolonger loses data
[] Ensure group/title/user combination is unique during text import.
[] During Add/Edit, fields containing only whitespace characters (space,
horzontal tab, vertical tab, carriage return, new line and form feed) are
considered empty fields.
[1751465] Fields containing only whitespace or whitespace between double quotes
are now treated as empty during plain text import.
[1783905] Read-only status maintained after unlocking a database.
[1782407] Export to text file now includes "title", if selected.
[1734220] XML Export line of Notes fields containing CRLF now works correctly.
The default delimeter has been made the same as for Export to a Text file

New Features for 3.10
=====================
[1752896] Add ability to edit an entry's notes field using user's default 
text editor via right click on Notes field.
[1750010] Drag&Drop between databases now supported.
[1517048] PasswordSafe can now be installed as an msi package (Windows
installer). This allows site administrators to 'push' PasswordSafe to
client machines with group policy. Thanks to xenophonf.
[1751484] Error log file produced when Merging and Importing text file.

Bugs fixed in 3.09
==================
[1748665] Number of passwords to remember (password history) can now
be set to more than 99 by typing rather than only by spinbox.
[] A note on possible problems with the autotype functionality and
some 3rd party popup-blockers. Thanks to mrttoo for the heads-up.
[] Protect user from losing entries in case of non-unique uuids in
read database. 